load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "embedded-io-convert",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    deps = [
        "@crates//:embedded-io-adapters",
        "@crates//:embedded-io-async",
        "@crates//:futures",
        "@crates//:merge-io",
        "@crates//:pin-project",
    ],
)
