[package]
name = "embedded-io-convert"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Convert embedded-io-async types back to futures ones (nightly only)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io-adapters = {version="0.6.1",features=["futures-03"]}
embedded-io-async = "0.6.1"
futures = "0.3.30"
merge-io = "0.3.0"
# embedded-io-adapters.workspace = true
# embedded-io-async.workspace = true
# futures.workspace = true
# merge-io.workspace = true
pin-project = "1.1.3"
